--- a/index.html
+++ b/index.html
@@ -186,11 +186,11 @@
                                 </div>
                             </div>
                             <div>
-                                <p>It looks like an Instagram but it is not an Instagram. This is a webpage  I created for You. This is my Small Gift for Your Birthday.  I hope you like this. Please Reply I am Waiting For Your Message. <br> <br></p>
+                                <p>It looks like an Instagram but it is not an Instagram. This is a webpage I created for You. This is my Small Gift for Your Birthday. I hope you like this. Please Reply I am Waiting For Your Message. <br> <br></p>
                                 <center>
                                 <p>Please Unblock 🤧🙏</p><br>
                                 <a href="https://instagram.com/one__and_only_peice_?utm_source=qr&igshid=OGIxMTE0OTdkZA==" target="_blank" >one_and_only_peice</a><br> <br>
-                                <a href="https://instagram.com/_this_id_made_only_for_u?igshid=OGQ5ZDc2ODk2ZA==" target="_blank">_this_id_made_only_for_u</a><br><br>
+                                <a href="https://instagram.com/_this_id_made_only_for_u?igshid=OGQ5ZDc2ODk2ZA==" target="_blank">_this_id_made_only_for_u</a><br><br><br><br><br>
                                 </center>
                             </div>
                         </div>
